--- a/index.html
+++ b/index.html
@@ -88,55 +88,55 @@
     <section class="lg:-mt-20 mt-8">
         <div class="container-sm px-10">
             <div class="grid grid-cols-2 lg:grid-cols-6 gap-10 lg:gap-0">
-                <div class="card bg-white shadow-md px-10 py-10 text-gray-800 mx-auto">
+                <a  href="/catalog/index.html" class="card bg-white shadow-md px-10 py-10 text-gray-800 mx-auto">
                     <div class="flex flex-col items-center">
                         <div class="border-1 border-b border-gray-400 w-[120px] mb-10"></div>
                         <div class="uppercase font-light text-lg text-center mb-10">Enress+hauser</div>
                         <img class="arrow-icon" src="../imgs/arrows.svg" width="15" >
                     </div>
-                </div>
-                <div class="card bg-white shadow-md px-10 py-10 text-gray-800 mx-auto">
+                </a>
+                <a  href="/catalog/index.html" class="card bg-white shadow-md px-10 py-10 text-gray-800 mx-auto">
                     <div class="flex flex-col items-center">
                         <div class="border-1 border-b border-gray-400 w-[120px] mb-10"></div>
                         <div class="uppercase font-light text-lg text-center mb-10">KEB</div>
                         <img class="arrow-icon" src="../imgs/arrows.svg" width="15" >
                     </div>
-                </div>
-                <div class="card bg-white shadow-md px-10 py-10 text-gray-800 mx-auto">
+                </a>
+                <a  href="/catalog/index.html" class="card bg-white shadow-md px-10 py-10 text-gray-800 mx-auto">
                     <div class="flex flex-col items-center">
                         <div class="border-1 border-b border-gray-400 w-[120px] mb-10"></div>
                         <div class="uppercase font-light text-lg text-center mb-10">Satec</div>
                         <img class="arrow-icon" src="../imgs/arrows.svg" width="15" >
                     </div>
-                </div>
-                <div class="card bg-white shadow-md px-10 py-10 text-gray-800 mx-auto">
+                </a>
+                <a  href="/catalog/index.html" class="card bg-white shadow-md px-10 py-10 text-gray-800 mx-auto">
                     <div class="flex flex-col items-center">
                         <div class="border-1 border-b border-gray-400 w-[120px] mb-10"></div>
                         <div class="uppercase font-light text-lg text-center mb-10">Modcon</div>
                         <img class="arrow-icon" src="../imgs/arrows.svg" width="15" >
                     </div>
-                </div>
-                <div class="card bg-white shadow-md px-10 py-10 text-gray-800 mx-auto">
+                </a>
+                <a  href="/catalog/index.html" class="card bg-white shadow-md px-10 py-10 text-gray-800 mx-auto">
                     <div class="flex flex-col items-center ">
                         <div class="border-1 border-b border-gray-400 w-[120px] mb-10"></div>
                         <div class="uppercase font-light text-lg text-center mb-10">Wika</div>
                         <img class="arrow-icon" src="../imgs/arrows.svg" width="15" >
                     </div>
-                </div>
-                <div class="card bg-white shadow-md px-10 py-10 text-gray-800 mx-auto">
+                </a>
+                <a  href="/catalog/index.html" class="card bg-white shadow-md px-10 py-10 text-gray-800 mx-auto">
                     <div class="flex flex-col items-center">
                         <div class="border-1 border-b border-gray-400 w-[120px] mb-10"></div>
                         <div class="uppercase font-light text-lg text-center mb-10">Supcon</div>
                         <img class="arrow-icon" src="../imgs/arrows.svg" width="15" >
                     </div>
-                </div>
+                </a>
             </div>
         </div>
     </section>
 
     <section>
         <div class="relative">
-            <div class="container-sm px-4 py-20 lg:pt-52 lg:pb-40">
+            <div class="container-sm px-4 py-20 lg:py-32">
                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mt-8">
                     <div class="bg-cap flex flex-col space-y-8">
                         <p class="font-bold text-gray-800 uppercase text-4xl">Компания CAP Технология</p>
@@ -284,12 +284,12 @@
         </div>
     </section>
 
-    <section class="bg-gray-100">
+    <section class="bg-white">
         <div class="container-sm py-16">
             <div class="flex flex-col space-y-10 md:flex-row md:space-x-8 md:space-y-0 md:justify-between md:items-center">
                 <div class="col-span-1 text-gray-800 font-bold text-3xl uppercase">Наши партнёры</div>
                 <div id="carousel-partners">
-                    <div class="carousel-inner space-x-2">
+                    <div class="carousel-inner space-x-3">
                         <div class="carousel-slide-partner">
                             <img src="../imgs/partners/image 5.png" alt="Image 1">
                         </div>
@@ -304,6 +304,30 @@
                         </div>
                         <div class="carousel-slide-partner">
                             <img src="../imgs/partners/image 1.png" alt="Image 1">
+                        </div>
+                        <div style="opacity: 0;"  class="carousel-slide-partner">
+                            <img src="../imgs/partners/image 6.png" alt="Image 1">
+                        </div>
+                        <div style="opacity: 0;"  class="carousel-slide-partner">
+                            <img src="../imgs/partners/image 7.png" alt="Image 1">
+                        </div>
+                        <div  style="opacity: 0;" class="carousel-slide-partner">
+                            <img src="../imgs/partners/image 8.png" alt="Image 1">
+                        </div>
+                        <div style="opacity: 0;"  class="carousel-slide-partner">
+                            <img src="../imgs/partners/image 9.png" alt="Image 1">
+                        </div>
+                        <div style="opacity: 0;"  class="carousel-slide-partner">
+                            <img src="../imgs/partners/image 10.png" alt="Image 1">
+                        </div>
+                        <div style="opacity: 0;"  class="carousel-slide-partner">
+                            <img src="../imgs/partners/image 11.png" alt="Image 1">
+                        </div>
+                        <div style="opacity: 0;"  class="carousel-slide-partner">
+                            <img src="../imgs/partners/image 12.png" alt="Image 1">
+                        </div>
+                        <div style="opacity: 0;"  class="carousel-slide-partner">
+                            <img src="../imgs/partners/image 13.png" alt="Image 1">
                         </div>
                     </div>
                 </div>
@@ -387,7 +411,7 @@
         <div class="flex flex-col items-center justify-between">
             <div style="display: none;" class="flex flex-col items-center -mt-4 mb-4 transition delay-300 ease-in-out" id="contact-panel">
                 <div class="flex flex-col space-y-3 transition ease-in-out delay-150">
-                    <a class="bg-[#A9C7F3] w-16 h-16 rounded-full flex items-center justify-center contact-btn">
+                    <a href="tel:+77182644437" class="bg-[#A9C7F3] w-16 h-16 rounded-full flex items-center justify-center contact-btn">
                         <img src="./imgs/phone.svg" width="25">
                     </a>
                     <a class="bg-[#A9C7F3] w-16 h-16 rounded-full flex items-center justify-center contact-btn">
