--- a/reference-list/index.html
+++ b/reference-list/index.html
@@ -136,7 +136,7 @@
         <div class="flex flex-col items-center justify-between">
             <div style="display: none;" class="flex flex-col items-center -mt-4 mb-4 transition delay-300 ease-in-out" id="contact-panel">
                 <div class="flex flex-col space-y-3 transition ease-in-out delay-150">
-                    <a class="bg-[#A9C7F3] w-16 h-16 rounded-full flex items-center justify-center contact-btn">
+                    <a href="tel:+77182644437" class="bg-[#A9C7F3] w-16 h-16 rounded-full flex items-center justify-center contact-btn">
                         <img src="../imgs/phone.svg" width="25">
                     </a>
                     <a class="bg-[#A9C7F3] w-16 h-16 rounded-full flex items-center justify-center contact-btn">
