--- a/service/index.html
+++ b/service/index.html
@@ -209,12 +209,12 @@
         </div>
     </section>
 
-    <section class="bg-gray-100">
+    <section class="bg-white">
         <div class="container-sm py-16">
             <div class="flex flex-col space-y-10 md:flex-row md:space-x-8 md:space-y-0 md:justify-between md:items-center">
                 <div class="col-span-1 text-gray-800 font-bold text-3xl uppercase">Наши партнёры</div>
                 <div id="carousel-partners">
-                    <div class="carousel-inner space-x-2">
+                    <div class="carousel-inner space-x-3">
                         <div class="carousel-slide-partner">
                             <img src="../imgs/partners/image 5.png" alt="Image 1">
                         </div>
@@ -230,14 +230,31 @@
                         <div class="carousel-slide-partner">
                             <img src="../imgs/partners/image 1.png" alt="Image 1">
                         </div>
-                        <div style="opacity: 0;" class="carousel-slide-partner">
-                            <img src="../imgs/partners/image 1.png" alt="Image 1">
+                        <div style="opacity: 0;"  class="carousel-slide-partner">
+                            <img src="../imgs/partners/image 6.png" alt="Image 1">
                         </div>
-                        <div style="opacity: 0;" class="carousel-slide-partner">
-                            <img src="../imgs/partners/image 1.png" alt="Image 1">
+                        <div style="opacity: 0;"  class="carousel-slide-partner">
+                            <img src="../imgs/partners/image 7.png" alt="Image 1">
+                        </div>
+                        <div  style="opacity: 0;" class="carousel-slide-partner">
+                            <img src="../imgs/partners/image 8.png" alt="Image 1">
+                        </div>
+                        <div style="opacity: 0;"  class="carousel-slide-partner">
+                            <img src="../imgs/partners/image 9.png" alt="Image 1">
+                        </div>
+                        <div style="opacity: 0;"  class="carousel-slide-partner">
+                            <img src="../imgs/partners/image 10.png" alt="Image 1">
+                        </div>
+                        <div style="opacity: 0;"  class="carousel-slide-partner">
+                            <img src="../imgs/partners/image 11.png" alt="Image 1">
+                        </div>
+                        <div style="opacity: 0;"  class="carousel-slide-partner">
+                            <img src="../imgs/partners/image 12.png" alt="Image 1">
+                        </div>
+                        <div style="opacity: 0;"  class="carousel-slide-partner">
+                            <img src="../imgs/partners/image 13.png" alt="Image 1">
                         </div>
                     </div>
-                
                 </div>
             </div>
             <div class="flex justify-end mt-8">
@@ -335,7 +352,7 @@
         <div class="flex flex-col items-center justify-between">
             <div style="display: none;" class="flex flex-col items-center -mt-4 mb-4 transition delay-300 ease-in-out" id="contact-panel">
                 <div class="flex flex-col space-y-3 transition ease-in-out delay-150">
-                    <a class="bg-[#A9C7F3] w-16 h-16 rounded-full flex items-center justify-center contact-btn">
+                    <a href="tel:+77182644437" class="bg-[#A9C7F3] w-16 h-16 rounded-full flex items-center justify-center contact-btn">
                         <img src="../imgs/phone.svg" width="25">
                     </a>
                     <a class="bg-[#A9C7F3] w-16 h-16 rounded-full flex items-center justify-center contact-btn">
