--- a/products/index.html
+++ b/products/index.html
@@ -237,7 +237,7 @@
                             </div>
                         </div>
                     </a >
-                    <a href="/product/index.html" class="product col-span-2 row-span-2">
+                    <a href="/product/index.html" class="product">
                         <div class="product-item bg-white h-full hover:cursor-pointer">
                             <div class="flex flex-col justify-between h-full">
                                 <div class="flex justify-center items-center pt-10">
